# marctable

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/marctable/: __init__.py  marc.json  marc.py  utils.py
tests/: conftest.py  test_marc.py  test_utils.py
