[project]
name = "marctable"
version = "0.6.0"
description = "Convert MARC to CSV and Parquet"
authors = [{ name = "Ed Summers", email = "ehs@pobox.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">= 3.12" 
dependencies = [
    "pymarc >= 5.1.0",
    "pyarrow >= 14.0.2",
    "pandas >= 2.1.4",
    "beautifulsoup4 >= 4.12.2",
    "requests >= 2.31.0",
    "click >= 8.1.7"
]

[project.urls]
Homepage = "https://github.com/sul-dlss-labs/marctable"

[project.scripts]
marctable = "marctable:main"

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "types-requests >= 2.31.0.10",
    "types-beautifulsoup4 >= 4.12.0.7",
    "mypy >= 1.8.0",
    "pandas-stubs >= 2.1.4.231227",
    "pyarrow-stubs >= 10.0.1.7",
    "ruff>=0.9.6",
    "setuptools>=75.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/marctable"]
include = [
    "src/*.py",
    "src/*.json"
]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = [
    "src"
]
markers = [
    "crawl: marks optional crawling tests, select with '--crawl'"
]
      

[tool.mypy]
warn_no_return = false
exclude = "^dist.*"
